@@ -1,5 +1,5 @@
 /*
- * "$Id: job.c,v 1.124.2.78 2003/08/01 20:09:22 mike Exp $"
+ * "$Id: job.c,v 1.124.2.79 2003/09/02 20:40:00 mike Exp $"
  *
  *   Job management routines for the Common UNIX Printing System (CUPS).
  *
@@ -303,7 +303,7 @@ CheckJobs(void)
     * Start pending jobs if the destination is available...
     */
 
-    if (current->state->values[0].integer == IPP_JOB_PENDING)
+    if (current->state->values[0].integer == IPP_JOB_PENDING && !NeedReload)
     {
       if ((pclass = FindClass(current->dest)) != NULL)
       {
@@ -2811,5 +2811,5 @@ start_process(const char *command,	/* I - Full path to command */
 
 
 /*
- * End of "$Id: job.c,v 1.124.2.78 2003/08/01 20:09:22 mike Exp $".
+ * End of "$Id: job.c,v 1.124.2.79 2003/09/02 20:40:00 mike Exp $".
  */
